src/modules/nft/data_provider/snapshots/near_enhanced_api__modules__nft__data_provider__metadata__tests__nft_contract_metadata_broken_contract.snap
---
source: src/modules/nft/data_provider/metadata.rs
expression: metadata
---
Err(
    Error {
        code: 500,
        message: "Contract Error: The contract did not provide NFT Metadata which is a required part of NFT NEP 171",
        retriable: true,
    },
)
