src/modules/nft/data_provider/snapshots/near_enhanced_api__modules__nft__data_provider__metadata__tests__nft_contract_metadata_other_contract_deployed.snap
---
source: src/modules/nft/data_provider/metadata.rs
expression: metadata
---
Err(
    Error {
        code: 400,
        message: "Invalid Input: The account `usn` does not implement any suitable contract at block 68000000",
        retriable: false,
    },
)
